# mtfind

./: CMakeLists.txt  README.md
include/: File.h  MtFind.h  Queue.h  ThreadPool.h
mtfind1/: mtfind1.vcxproj  mtfind1.vcxproj.filters
src/: CMakeLists.txt  File.cpp  MtFind.cpp  main.cpp
